# approx_post

./: .gitignore  README.md  setup.cfg  setup.py
approx_post/: __init__.py  losses.py  models.py  optimisers.py
approx_post/containers/: array.py  base.py  jax.py  numpy.py  random.py
approx_post/distributions/: __init__.py  amortised.py  approx.py  bounds.py  covariance.py  distribution.py  func_utils.py  gaussian.py  joint.py  mixture.py  simple.py  wrappers.py
approx_post/divergences/: cv.py  forward_kl.py  reverse_kl.py
approx_post/examples/: 1d_gaussian_example.py  gaussian_example.py
approx_post/losses/: cv.py  forward_kl.py  reverse_kl.py  utils.py
approx_post/optimisation/: algorithms.py  bounds.py  fit.py  loop.py  optim_loop.py  utilities.py
example_notebooks/: gaussian_example.ipynb  gaussian_example.py
examples/: Sandbox.ipynb  amortised_example.ipynb  amortised_mixture_example.ipynb  gaussian_example.ipynb  mixture_example.ipynb
examples/gaussian_1d/: Untitled.ipynb  forward_loss.json  gaussian_1d.ipynb  gaussian_1d_utils.py  reverse_loss.json
