[metadata]
name = approx_post
version = 0.0.0
author = Matthew Bilton
author_email = Matt.A.Bilton@gmail.com
long_description = file: README.md
description = Tool for creating flexible and/or amortized posteriors, powered by Jax.
keywords = posterior, approximate inference, jax, bayesian
url = https://github.com/MABilton/approx_post
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.5
install_requires =
    jax>=0.2.25
    jaxlib>=0.1.71
    numpy>=1.20.0
    arraytainers @ git+https://github.com/MABilton/arraytainers@v0.0.0

packages = find:

[options.packages.find]
exclude =
    tests
    example_notebooks